# running2

./: .gitignore  Cargo.toml  LICENSE  README.md  example.env  structure.sql
extras/: running2.service
src/: common.rs  config.rs  db_utils.rs  errors.rs  main.rs
src/auth/: models.rs  routes.rs
src/middleware/: auth.rs  mod.rs
src/runs/: mod.rs  models.rs  routes.rs
src/shoes/: mod.rs  models.rs  routes.rs
webapp/: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json
webapp/e2e/src/: app.e2e-spec.ts
webapp/src/: index.html  main.ts  polyfills.ts  writeVersionInfo.js
webapp/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  hammer.config.ts  imports.scss
webapp/src/app/runs/: runs.module.ts
webapp/src/app/runs/edit-run/: edit-run.component.html  edit-run.component.scss  edit-run.component.spec.ts  edit-run.component.ts
webapp/src/app/runs/list-runs/: list-runs.component.html  list-runs.component.scss  list-runs.component.spec.ts  list-runs.component.ts
webapp/src/app/runs/state/: run.model.ts  runs.query.ts  runs.service.ts  runs.store.ts
webapp/src/app/session/: http-session.interceptor.spec.ts  http-session.interceptor.ts  session.guard.ts  session.module.ts
webapp/src/app/shared/: api.ts  shared.module.ts  utils.ts
webapp/src/app/shoes/: shoes.module.ts
webapp/src/app/stats/: stats.module.ts  stats.service.ts
webapp/src/assets/: manifest.webmanifest
webapp/src/environments/: environment.prod.ts  environment.ts
(+47 files in other folders)
