[package]
name = "running2"
version = "0.1.0"
authors = ["Holger Cremer <HolgerCremer@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = [ ]}
actix-service = "1.0.6" # needed for default_handler
actix-files = "0.4.0"
actix-cors = "0.5"
futures = "0.3.4"

serde = "1.0.106"
serde_json = "1.0.51"

sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "sqlite" ] }

dotenv = "0.15.0"
envy = "0.4"

env_logger = "0.7.1"
log = "0.4.8"

lazy_static = "1.4"

jsonwebtoken = "7.1.0"

bcrypt = "0.8"

[dependencies.openssl]
version = "0.10.29"
features = [
    "vendored"
]